--- a/src/sass/util/_base.scss
+++ b/src/sass/util/_base.scss
@@ -5,10 +5,18 @@ html {
 
 *,
 *::before,
-*::after {
+*::after,
+input[type=search] {
   box-sizing: inherit;
 }
 
 img {
+  display: block;
   max-width: 100%;
+}
+
+textarea,
+input:not([type=checkbox]):not([type=radio]) {
+  border-radius: 0;
+  -webkit-appearance: none;
 }
