--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,8 @@
 @import 'util/var';
 @import 'util/mixins';
 @import 'util/placeholders';
-@import 'util/svgstore';
 @import 'util/base';
 @import 'util/typography';
+
+// modules
+@import 'modules/svgstore';
