--- a/src/sass/util/_mixins.scss
+++ b/src/sass/util/_mixins.scss
@@ -1,4 +1,4 @@
-// clearfix
+// clear
 @mixin clear {
   &::before,
   &::after {
@@ -8,6 +8,12 @@
   &::after {
     clear: both;
   }
+}
+
+// hide
+@mixin hide {
+  position: absolute;
+  left: -999rem;
 }
 
 // min-width media query
