new media query mixins and vars

--- a/src/sass/util/_mixins.scss
+++ b/src/sass/util/_mixins.scss
@@ -16,9 +16,9 @@
   left: -999rem;
 }
 
-// min-width media query
-@mixin min($width) {
-  @media (min-width: #{$width}) {
+// media query
+@mixin mq($mq) {
+  @media #{$mq} {
     @content;
   }
 }
