--- a/src/svgstore/util/_template.mustache
+++ b/src/svgstore/util/_template.mustache
@@ -1,6 +1,7 @@
 // automatically generated from svgstore-sass task template
 .svgstore {
   display: block;
+  pointer-events: none;
   position: relative;
   width: 100%;
   height: 0;
