--- a/src/sass/util/_base.scss
+++ b/src/sass/util/_base.scss
@@ -1,6 +1,5 @@
 html {
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 body {
@@ -8,16 +7,31 @@ body {
   word-wrap: break-word;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
 *,
 *::before,
 *::after,
 input[type=search] {
   box-sizing: inherit;
+}
+
+*,
+h1 {
+  margin: 0;
+  padding: 0;
+}
+
+iframe {
+  border: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+svg {
+  fill: currentColor;
 }
 
 textarea,
@@ -30,8 +44,12 @@ input:not([type=checkbox]):not([type=radio]) {
   -webkit-appearance: none;
 }
 
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a,
+button {
+  transition: color $transition, background-color $transition;
 }
