--- a/src/sass/util/_mixins.scss
+++ b/src/sass/util/_mixins.scss
@@ -4,6 +4,7 @@
   &::after {
     content: '';
     display: table;
+    width: 0;
   }
   &::after {
     clear: both;
@@ -33,6 +34,6 @@
 @mixin fill($svg, $color) {
   $color: str-slice(#{$color}, 2);
   $insert: 'fill%3D%22%23#{$color}%22%20';
-  $index: str-index($svg, '%3Csvg%20') + 9;  
+  $index: str-index($svg, '%3Csvg%20') + 9;
   background-image: str-insert($svg, $insert, $index);
 }
