--- a/src/sass/util/_mixins.scss
+++ b/src/sass/util/_mixins.scss
@@ -25,9 +25,21 @@
 }
 
 // media query
-@mixin mq($mq) {
-  @media #{$mq} {
-    @content;
+@mixin mq($min: 0, $max: 0) {
+  @if ($min > 0 and $max > 0) {
+    @media (min-width: $min) and (max-width: $max) {
+      @content;
+    }
+  }
+  @else if ($min > 0) {
+    @media (min-width: $min) {
+      @content;
+    }
+  }
+  @else if ($max > 0) {
+    @media (max-width: $max) {
+      @content;
+    }
   }
 }
 
