--- a/src/nunjucks/layouts/_default.html
+++ b/src/nunjucks/layouts/_default.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{{ title }}</title>
     <link href="/css/style.css" rel="stylesheet">
   </head>
   <body>
