--- a/src/sass/util/_mixins.scss
+++ b/src/sass/util/_mixins.scss
@@ -52,7 +52,7 @@
 }
 
 // underline
-@mixin underline($color, $position: 100%, $size: 0.0625rem) {
+@mixin underline($color: currentColor, $position: 100%, $size: 0.0625rem) {
   background-image: linear-gradient($color, $color);
   background-repeat: repeat-x;
   background-position: 0 $position;
