polyfill.io added

--- a/src/nunjucks/layouts/_default.html
+++ b/src/nunjucks/layouts/_default.html
@@ -13,6 +13,7 @@
     {% include "modules/_header.html" %}
     {% block content %}{% endblock %}
     {% include "modules/_footer.html" %}
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script src="/js/script.js"></script>
   </body>
 </html>
