--- a/src/svgstore/util/_template.mustache
+++ b/src/svgstore/util/_template.mustache
@@ -1,15 +1,11 @@
 // automatically generated from svgstore-sass task template
 .svgstore {
-  display: block;
   position: relative;
-  width: 100%;
-  height: 0;
   pointer-events: none;
 
   svg {
     position: absolute;
     top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
   }
@@ -23,6 +19,6 @@ $svgstore--{{ name }}: {{{ data }}};
 }
 
 .svgstore--{{ name }} {
-  padding-bottom: {{ height }} / {{ width }} * 100%;
+  padding-top: {{ height }} / {{ width }} * 100%;
 }
 {{ /items }}
