--- a/src/svgstore/util/_template.mustache
+++ b/src/svgstore/util/_template.mustache
@@ -5,7 +5,6 @@
 
   svg {
     position: absolute;
-    top: 0;
     width: 100%;
     height: 100%;
   }
@@ -19,6 +18,6 @@ $svgstore--{{ name }}: {{{ data }}};
 }
 
 .svgstore--{{ name }} {
-  padding-top: {{ height }} / {{ width }} * 100%;
+  padding-bottom: {{ height }} / {{ width }} * 100%;
 }
 {{ /items }}
