--- a/src/svgstore/util/_template.mustache
+++ b/src/svgstore/util/_template.mustache
@@ -1,10 +1,13 @@
 // automatically generated from svgstore-sass task template
 .svgstore {
+  display: block;
   position: relative;
   pointer-events: none;
 
   svg {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
   }
