--- a/src/sass/util/_svgstore.scss
+++ b/src/sass/util/_svgstore.scss
@@ -1,10 +1,12 @@
 // automatically generated from svgstore-sass task template
 .svgstore {
+  display: block;
   position: relative;
-  pointer-events: none;
 
   svg {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
   }
