--- a/src/nunjucks/layouts/_default.html
+++ b/src/nunjucks/layouts/_default.html
@@ -7,13 +7,13 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title>{{ title }}</title>
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/style.min.css" rel="stylesheet">
   </head>
   <body>
     {% include "modules/_header.html" %}
     {% block content %}{% endblock %}
     {% include "modules/_footer.html" %}
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="/js/script.min.js"></script>
   </body>
 </html>
