--- a/src/nunjucks/layouts/_default.html
+++ b/src/nunjucks/layouts/_default.html
@@ -1,6 +1,6 @@
 {% from "util/_svgstore.html" import svgstore %}
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
