--- a/src/sass/util/_base.scss
+++ b/src/sass/util/_base.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/sanitize.css/lib/sanitize.scss';
+@import '../../node_modules/sanitize.css/sanitize';
 
 :root {
   overflow-x: hidden;
