simplify search input selector

--- a/src/sass/util/_base.scss
+++ b/src/sass/util/_base.scss
@@ -22,10 +22,8 @@ img {
   height: auto;
 }
 
-input {
-  &[type='search'] {
-    appearance: none;
-  }
+[type='search'] {
+  appearance: none;
 }
 
 svg {
