--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 @import 'util/typography';
 @import 'util/layout';
 @import 'util/helpers';
+@import 'util/wordpress';
 
 // modules
 @import 'modules/**/*.scss';
