--- a/src/sass/util/_wordpress.scss
+++ b/src/sass/util/_wordpress.scss
@@ -1,7 +1,16 @@
-#wpadminbar {
-  position: fixed;
-}
-
 .wp-caption {
   max-width: 100%;
+}
+
+.alignleft {
+  float: left;
+}
+
+.alignright {
+  float: right;
+}
+
+.aligncenter {
+  margin-right: auto;
+  margin-left: auto;
 }
